"Bridge edge loops" command bridges the wrong vertices #68129

Closed
opened 2019-08-02 13:18:06 +02:00 by Peter Berglund · 3 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.70

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449

Short description of error
I don't understand why Blender can't bridge these edge loops correctly. The edge loops are close to each other and have similar shapes. Despite that, Blender chooses to bridge the vertices across the X axis in this case, and not the closest vertices.

I even put those bridge loops so close together was that when they were further apart, Blender also bridged the loops incorrectly. I thought by scaling and moving the lower loop closer to the upper, maybe the problem could be solved. But no. I also tried to extrude one or both of the edge loops, moving them over or below the other loop (sometimes also scaling them) to see if they could be bridged correctly then, but nothing works. Not even removing doubles, and my normals are correct as far as I can see.

Exact steps for others to reproduce the error
Bridge the edge loops marked in the file: The bottom of the low poly ball and the top of the rest of the chess piece.
King before bridge edge loops.blend

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.70 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: `f6cb5f5449` **Short description of error** I don't understand why Blender can't bridge these edge loops correctly. The edge loops are close to each other and have similar shapes. Despite that, Blender chooses to bridge the vertices across the X axis in this case, and not the closest vertices. I even put those bridge loops so close together was that when they were further apart, Blender also bridged the loops incorrectly. I thought by scaling and moving the lower loop closer to the upper, maybe the problem could be solved. But no. I also tried to extrude one or both of the edge loops, moving them over or below the other loop (sometimes also scaling them) to see if they could be bridged correctly then, but nothing works. Not even removing doubles, and my normals are correct as far as I can see. **Exact steps for others to reproduce the error** Bridge the edge loops marked in the file: The bottom of the low poly ball and the top of the rest of the chess piece. [King before bridge edge loops.blend](https://archive.blender.org/developer/F7645552/King_before_bridge_edge_loops.blend)
Author

Added subscriber: @BlenderPet

Added subscriber: @BlenderPet
Campbell Barton was assigned by Sebastian Parborg 2019-08-02 17:20:06 +02:00

This issue was referenced by a744fedc85

This issue was referenced by a744fedc859cb528d69d3e267dc98c45bd993ede

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68129
No description provided.