Fix T68129: Bridge edge loops fails on small edge loops